--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +7,7 @@
 
 body {
     font-family: young serif;;
-    background-color: #E0FFFF;
+    background-color: #E0F7F7;
 }
 
 nav {
@@ -42,7 +43,7 @@ main {
 
 .section {
     display: none;
-    background-color: #E0FFFF;
+    background-color: white;
     padding: 2rem;
     border-radius: 8px;
     margin-top: 2rem;
@@ -74,7 +75,7 @@ p {
 }
 
 .par-mums-content {
-    background: #87CEEB;
+    background: #9DF7E5;
     padding: 2rem;
     border-radius: 8px;
 }
@@ -137,7 +138,7 @@ input, textarea {
 
 button {
     padding: 0.5rem 1rem;
-    background-color: #1E90FF;
+    background-color: #00BCD4;
     color: white;
     border: none;
     border-radius: 4px;
@@ -145,7 +146,7 @@ button {
 }
 
 button:hover {
-    background-color: #4169E1;
+    background-color: #008ba3;
 }
 
 .contact-info {
